All Emails Done

--- a/app/views/hardship_mailer/approved_hardship_to_helping_hands_email.html.erb
+++ b/app/views/hardship_mailer/approved_hardship_to_helping_hands_email.html.erb
@@ -13,7 +13,7 @@
       Hi Missy,
     </p>
     <p>
-      A new hardship application just got approved on TOCA Cares.  Here's the information:
+      A new hardship application was just approved on TOCA Cares.  Here's the information:
     </p>
 
     <div style="border: 2px solid #CDDC29; margin: 20px 30px 20px 30px; padding: 15px">
