Testimonials Count Error

--- a/app/views/testimonials/index.html.erb
+++ b/app/views/testimonials/index.html.erb
@@ -95,7 +95,7 @@
                 </div>
               </div> <!-- col -->
               <div class="col-sm-8 col-lg-12 text-left">
-                <% if @featured_scholarship.count == 0 %>
+                <% if @featured_scholarship.count < 2 %>
                   <h6 class="font-weight-bold color-black toca-uppercase mt-3">Scholarship</h6>
                   <p class="dark-grey-text">
                     <i class="fas fa-quote-left pr-2 color-toca-red"></i>
