--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -98,7 +98,7 @@
 
           <p class="dark-grey-text text-left">
             <strong class="toca-uppercase bold">Cost Sharing</strong><br>
-            TOCA Cares will pay 80% (up to $500 per year) of the costs of joining or participating in a charity serving your local community.  This is not a subsidy for you giving to a charity; it is a subsity for you participating, such as the cost of joining a Rotary Club, being a Big Brother or Big Sister, or coaching a soccer team for disadvantaged kids.
+            TOCA Cares will pay 80% (up to $500 per year) of the costs of joining or participating in a charity serving your local community.  This is not a subsity for you giving to a charity; it is a subsity for you participating, such as the cost of joining a Rotary Club, being a Big Brother or Big Sister, or coaching a soccer team for disadvantaged kids.
           </p>
 
           <%= link_to "Apply Now", new_charity_path, class: "btn btn-primary btn-lg" %>
