--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -56,7 +56,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q3H">How do I donate to the fund? </h5>
           <p class="color-dark-grey mb-0" id ="Q3P">
-            You can donate <%= link_to "here", page_path(:contribute) %>.  Any TOCA employees who want to contribute can select any amount they want to donate directly from their paycheck.  (You can update your donation info any time by going to the <%= link_to "contribute", page_path(:contribute) %> section of the TOCA Cares website).  All contributions go straight to the community fund and are completely tax-deductible.
+            You can donate <%= link_to "here", page_path(:contribute) %>.  Any TOCA employees who want to contribute can select any amount they want to donate directly from their paycheck.  (You can update your donation info any time by going to the <%= link_to "contribute", page_path(:contribute) %> section of the TOCA Cares website.)  All contributions go straight to the community fund and are completely tax-deductible.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
