--- a/app/views/charities/_form.html.erb
+++ b/app/views/charities/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+  <div class="text-center">
+    <%= image_tag "Charity.png", class: "ball-character" %>
+  </div>
+
+
   <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Personal Information</p>
   <p><small>This information is anonymous and will not be seen by the deciding committee.</small></p>
 
