--- a/app/views/hardships/_form.html.erb
+++ b/app/views/hardships/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+    <div class="text-center">
+      <%= image_tag "Hardship.png", class: "ball-character" %>
+    </div>
+
+
   <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Personal Information</p>
   <p><small>This section is for the personal information for the person undergoing the hardship.  Information in this section is anonymous and will not be seen by the deciding committee.</small></p>
 
