--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -5,7 +5,7 @@
 
     <section class="team-section magazine-section text-center">
       <div class="text-center">
-        <%= image_tag "silhouette-woman-kicking.jpg", class: "img-fluid px-5", alt: "Woman kicking soccer ball.", style: "width: 100%; max-width: 600px" %>
+        <%= image_tag "Composite.jpg", class: "img-fluid px-5", alt: "Woman kicking soccer ball.", style: "width: 100%; max-width: 600px" %>
       </div> <!-- Image Grid column -->
 
       <div class="text-center">
