--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -172,6 +172,18 @@ img { max-width: 100%; }
   margin-right: 10px;
 }
 
+.ball-mini {
+  height: 100px;
+}
+
+.ball-character {
+  height: 150px;
+}
+
+
+
+
+
 
 
 /*-----------------------------
