--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -85,7 +85,7 @@
 
     <section class="text-center my-5 py-3" style="border: thin solid black">
       <h3 class="text-center w-responsive mx-auto my-5">
-        Shareholders have agreed to make contributions which are a multiple of the amount contributed by emplyees.
+        Shareholders have agreed to make contributions which are a multiple of the amount contributed by employees.
       </h3>
 
       <h3 class="dark-grey-text w-responsive mx-auto mt-3 mb-5">
