--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,7 +81,9 @@ h1 {
 
 p a,
 td a,
-li a {
+li a,
+h4 a,
+h5 a {
   color: $color-toca-red;
   font-weight: bold;
 }
@@ -160,13 +162,13 @@ img { max-width: 100%; }
 .alert-warning, .alert-danger { color: $color-dark-grey; background-color: $transparent-red; border-color: $transparent-red;}
 
 .notification-bubble {
-  padding: 5px 10px 5px 10px;
+  padding: 5px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   color: white;
   font-weight: 900;
   display: inline-block;
-  height: 40px;
-  width: 40px;
+  height: 35px;
+  width: 35px;
   border: solid thin $color-toca-red;
   border-radius: 50% !important;
   margin-right: 10px;
