--- a/app/views/hardships/show.html.erb
+++ b/app/views/hardships/show.html.erb
@@ -182,7 +182,7 @@
       <% else %>
         <p>If you have a question about your application, you can message an admin here.</p>
       <% end %>
-      <%= link_to "Send a Message", new_message_path(ref_application_type: @scholarship.application_type, ref_application_id: @scholarship.id, user_id: @scholarship.user.id), class: "btn btn-secondary mt-3 mb-4 btn-lg btn-block" %>
+      <%= link_to "Send a Message", new_message_path(ref_application_type: @hardship.application_type, ref_application_id: @hardship.id, user_id: @hardship.user.id), class: "btn btn-secondary mt-3 mb-4 btn-lg btn-block" %>
 
       <!-- EXISTING MESSAGES  -->
       <% if @messages.count > 0 %>
