Repeating CC Form

--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -86,6 +86,12 @@
             <h5 class="text-center dark-grey-text w-responsive mx-auto">
               Please note that there is an additional fee of 3% for all credit card transactions.
             </h5>
+            <h5 class="text-center dark-grey-text w-responsive mx-auto">
+              If you want to make a recurring credit card payment you can do so using <%= link_to "this form", asset_path("TOCA CARES recurring CC FORM .docx") %>.  (This feature will be available via ProvisionBridge soon, but for now we have to manually&nbsp;process&nbsp;it.)
+            </h5>
+            <h5 class="text-center dark-grey-text w-responsive mx-auto">
+              You can email the completed form to <%= mail_to "mary@ProvisionBridge.org", "mary@ProvisionBridge.org", target: "_blank" %>.
+            </h5>
           </section>
         </div> <!-- col -->
 
